placed models to be built accordingly and specified hyperparameter optimization with advanced ray tune

--- a/Predicting Dementia/Image.ipynb
+++ b/Predicting Dementia/Image.ipynb
@@ -752,7 +752,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using  Tensorflow"
+    "## Using RESNET "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Vision Transformer "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using VGGNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hyper Parameter Tuning With Ray Tune (For thes best model)"
    ]
   },
   {
